fix(app): remove right marge causing horizontal scrollbar

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,7 +8,6 @@ html {
   scroll-behavior: smooth;
 }
 
-html,
 body {
-  overflow-x: hidden;
+  position: relative;
 }
